@@ -12,6 +12,9 @@
  * :hobana.freenode.net 311 Scott` Nawab ~OtakuSenp unaffiliated/otakusenpai * :OtakuSenpai
  * The above is a whois message, with ":hoba...e.net" being the prefix,
  * just have hobana.freenode.net assigned to the _prefix->hostname.
+ * Basically: Ignore spaces, take single word parameter if it does not start with
+   ':', take rest of the line if it does start with ':'. Exception: The first
+   parameter never starts with ':', even if it does.
  */
 
 using namespace Tsuki;
@@ -23,7 +26,7 @@ namespace Tsuki {
     std::string _command; // Privmsg or whois or ctcp
     std::string _content; // Data send by the sender
     std::string _sender; // Who send it(channel or user)
-    PacketType _pckType;
+    PacketType _pckType; // Type of packet
 
     inline void setPrefix(const std::string& prefix) {
       _prefix.setData(prefix);
@@ -49,7 +52,7 @@ namespace Tsuki {
       _pckType = static_cast<PacketType>(packet);
     }
 
-    inline std::string getContent() const { return _content; }
+    void Parse(const std::string& data);
 
   public:
     IRCMessage() : _prefix{}, _command{}, _content{}, _sender{} {}
@@ -58,30 +61,16 @@ namespace Tsuki {
     }
     IRCMessage(const IRCMessage& obj);
     IRCMessage(IRCMessage&& obj);
-    void operator= (const IRCMessage& obj);
+    IRCMessage& operator= (const IRCMessage& obj);
     ~IRCMessage() {}
-
-    //Same functionality,but doesn't return anything
-    void Parse(const std::string& data);
 
     inline std::string getPrefix() const { return _prefix.getData(); }
     inline std::string getCommand() const { return _command; }
     inline std::string getSender() const { return _sender; }
+    inline std::string getContent() const { return _content; }
     inline PacketType getPacketInfo() const { return _pckType; }
 
-    inline std::string getData() const {
-      std::string temp = _prefix.getData() + " " + _command + " " +
-                         _sender + " " + _content;
-      return temp;
-    }
-
-    template<typename T>
-    auto safe_iterate(T x,T y) {
-      while(x!=y) {
-         ++x;
-       }
-      return x;
-    }
+    std::string getData() const;
   };
 } // namespace Tsuki
 
